--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "305ca160",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D, Dropout, Conv2D, MaxPool2D\n",
     "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
-    "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D, Dropout, Flatten\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.cluster import KMeans\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,28 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "06b18ca4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _parse_function(filename, label):\n",
-    "    image_string = tf.io.read_file(filename)\n",
-    "    image_decoded = tf.image.decode_jpeg(image_string, channels=3)\n",
-    "    image = tf.cast(image_decoded, tf.float32)\n",
-    "    image = tf.image.resize(image, (224, 224))\n",
-    "    image = image / 255.0\n",
-    "    return image, label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "d5e8435c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Preparing data\n",
+    "def _parse_function(filename, label):\n",
+    "    image_string = tf.io.read_file(filename)\n",
+    "    image_decoded = tf.image.decode_jpeg(image_string, channels=3)\n",
+    "    image = tf.cast(image_decoded, tf.float32)\n",
+    "    image = tf.image.resize(image, (224, 224))\n",
+    "    image = 2*image/255.0-1\n",
+    "    return image, label\n",
     "\n",
     "data = pd.read_csv(\"dog-breed-identification/labels.csv\")\n",
     "label_to_int = {str(breed): idx for idx, breed in enumerate(data['breed'].unique())}\n",
@@ -80,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "9bf8b4b5",
    "metadata": {},
    "outputs": [],
@@ -98,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "204d2c24",
    "metadata": {},
    "outputs": [
@@ -107,24 +100,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "481/481 [==============================] - 191s 393ms/step - loss: 1.6623 - accuracy: 0.5767\n",
+      "481/481 [==============================] - 195s 400ms/step - loss: 1.4184 - accuracy: 0.6430\n",
       "Epoch 2/5\n",
-      "481/481 [==============================] - 197s 410ms/step - loss: 0.5855 - accuracy: 0.8262\n",
+      "481/481 [==============================] - 203s 423ms/step - loss: 0.4309 - accuracy: 0.8699\n",
       "Epoch 3/5\n",
-      "481/481 [==============================] - 197s 409ms/step - loss: 0.3815 - accuracy: 0.8894\n",
+      "481/481 [==============================] - 225s 468ms/step - loss: 0.2668 - accuracy: 0.9261\n",
       "Epoch 4/5\n",
-      "481/481 [==============================] - 197s 410ms/step - loss: 0.2593 - accuracy: 0.9356\n",
+      "481/481 [==============================] - 226s 469ms/step - loss: 0.1800 - accuracy: 0.9573\n",
       "Epoch 5/5\n",
-      "481/481 [==============================] - 197s 409ms/step - loss: 0.1909 - accuracy: 0.9546\n"
+      "481/481 [==============================] - 224s 465ms/step - loss: 0.1315 - accuracy: 0.9718\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2130e753e50>"
+       "<keras.callbacks.History at 0x1d109b01220>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "8fd759a9",
    "metadata": {},
    "outputs": [
@@ -145,16 +138,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64/64 [==============================] - 43s 666ms/step\n"
+      "64/64 [==============================] - 52s 806ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7511002444987775"
+       "0.8127139364303179"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,6 +157,109 @@
     "\n",
     "X_test, y_test = zip(*test)\n",
     "y_pred = model.predict(X_test[:1])\n",
+    "y_pred_int = [np.argmax(pred) for pred in y_pred]\n",
+    "accuracy = accuracy_score(np.array(y_test)[0], y_pred_int)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "40d7589c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating a model\n",
+    "\n",
+    "model_2 = tf.keras.Sequential([\n",
+    "    base_layers,\n",
+    "#     Dropout(0.2),\n",
+    "    Conv2D(filters = 64, kernel_size = (5,5), activation ='relu', input_shape = (224,224,3), padding='same'),\n",
+    "    MaxPool2D(pool_size=(2,2)),\n",
+    "    Conv2D(filters = 32, kernel_size = (3,3), activation ='relu', kernel_regularizer = 'l2', padding='same'),\n",
+    "    MaxPool2D(pool_size=(2,2)),\n",
+    "#     Conv2D(filters = 16, kernel_size = (7,7), activation ='relu', kernel_regularizer = 'l2', padding='same'),\n",
+    "#     MaxPool2D(pool_size=(2,2)),\n",
+    "#     Conv2D(filters = 8, kernel_size = (5,5), activation ='relu', kernel_regularizer = 'l2', padding='same'),\n",
+    "#     MaxPool2D(pool_size=(2,2)),\n",
+    "    \n",
+    "    GlobalAveragePooling2D(),\n",
+    "    Dropout(0.2),\n",
+    "    Dense(128, activation = \"relu\", kernel_regularizer = 'l2'),\n",
+    "    Dense(64, activation = \"relu\", kernel_regularizer = 'l2'),\n",
+    "    Dense(120, activation='softmax')\n",
+    "])\n",
+    "model_2.compile(optimizer='adam', loss=tf.keras.losses.SparseCategoricalCrossentropy(), metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1e209d20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "481/481 [==============================] - 236s 484ms/step - loss: 4.1760 - accuracy: 0.2354\n",
+      "Epoch 2/5\n",
+      "481/481 [==============================] - 243s 505ms/step - loss: 2.3923 - accuracy: 0.4957\n",
+      "Epoch 3/5\n",
+      "481/481 [==============================] - 243s 506ms/step - loss: 1.8176 - accuracy: 0.6098\n",
+      "Epoch 4/5\n",
+      "481/481 [==============================] - 256s 532ms/step - loss: 1.4769 - accuracy: 0.6808\n",
+      "Epoch 5/5\n",
+      "481/481 [==============================] - 247s 513ms/step - loss: 1.2656 - accuracy: 0.7289\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1d118c83fa0>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Fitting\n",
+    "\n",
+    "model_2.fit(train, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "84330859",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64/64 [==============================] - 50s 775ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.669437652811736"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Testing the model\n",
+    "\n",
+    "X_test, y_test = zip(*test)\n",
+    "y_pred = model_2.predict(X_test[:1])\n",
     "y_pred_int = [np.argmax(pred) for pred in y_pred]\n",
     "accuracy = accuracy_score(np.array(y_test)[0], y_pred_int)\n",
     "accuracy"
